# franka_position_servo

./: CMakeLists.txt  franka_position_servo_plugin.xml  package.xml
cfg/: joint_controller_params.cfg
config/: franka_position_servo.yaml  robot_config.yaml
include/franka_position_servo/: joint_position_controller.h  pseudo_inversion.h
launch/: joint_position_controller.launch  move_to_start.launch
scripts/: impedant_finger.py  moveit_franka.py  servo_pepper_class.py  servo_pepper_class_pikanje.py  tf2.py
src/: joint_position_controller.cpp
